style.css
/* vt323-regular - latin */
@font-face {
    font-family: 'VT323';
    font-style: normal;
    font-weight: 400;
    src: url('../fonts/vt323-v17-latin-regular.eot'); /* IE9 Compat Modes */
    src: local(''),
         url('../fonts/vt323-v17-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
         url('../fonts/vt323-v17-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
         url('../fonts/vt323-v17-latin-regular.woff') format('woff'), /* Modern Browsers */
         url('../fonts/vt323-v17-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
         url('../fonts/vt323-v17-latin-regular.svg#VT323') format('svg'); /* Legacy iOS */
}

body {
    display: flex;
    justify-content: center;
    background-color: lightgreen;

    /* prevent text from being selectable */
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}

img {  
    /* prevent image from being selectable */
    user-select: none;
    -moz-user-select: none;
    -webkit-user-drag: none;
    -webkit-user-select: none;
    -ms-user-select: none;
 }

.calculator {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #63bda4;
    border-radius: 22px;
    margin: 50px;
    padding: 40px;
    height: 600px;
    width: 450px;
}

.display {
    background-color: #d9ffea;
    height: 250px;
    width: 100%;
    box-sizing: border-box;
    margin: 0;
    padding: 12px;
    border-radius: 20px;
    font-size: 66px;
    font-family: 'VT323', Fallback, sans-serif;
    text-align: right;
    overflow-wrap: break-word;
}

.upper-row {
    display: flex;
    justify-content: space-between;
    width: 100%;
    margin-top: 30px;
    margin-bottom: 60px;
}

.digits {
    display: flex;
    background-color: black;
}

.one-to-five,
.six-to-zero {
    display: flex;
}

.digit {
    background-color: black;
    color: white;
    height: 32px;
    width: 32px;
    margin: 0;
    padding: 0;
    border-radius: 2px;
    border: none;
    transition: background-color 0.1s ease,
                border 0.1s ease;
}

.digit:hover {
    border: solid 2px gray;
}

.digit:active {
    background-color: gray;
}


.lower-row {
    display: flex;
    justify-content: space-around;
    width: 100%;
}

.lower-row > .left {
    display: flex;
    flex-direction: column;
    gap: 40px;
}

.lower-row > .left > .bottom {
    display: flex;
    gap: 10px;
}

.dpad {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
}

.dpad-empty {
    width: 50px;
    height: 50px;
}

.dpad-filled {
    background-color: yellow;
    width: 50px;
    height: 50px;
}

.lower-row > .right > .bottom {
    display: flex;
    justify-content: center;
    gap: 16px;
}


.lower-row > .right {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.lower-row > .right > .top {
    display: flex;
    height: 100px;
    gap: 16px;
}

.control[data-key='dot'] {
    height: 32px;
    border-radius: 16px;
}

.control[data-key='dot']:active {
    filter: invert(46%) sepia(68%) saturate(4043%) hue-rotate(166deg) brightness(102%) contrast(101%);
}

.control[data-key='reset'],
.control[data-key='power'] {
    background-color: black;
    color: white;
    height: 30px;
    width: 60px;
    border: none;
}

.control[data-key='clear']{
    align-self: flex-start;
    height: 60px;
}

.control[data-key='back']{
    align-self: flex-end;
    border-radius: 25px;
}

.control[data-key='equals']{
    border-radius: 50px;
}

.control:active {
    filter: brightness(130%) saturate(120%);
}

.operator:active {
    filter: brightness(80%) saturate(120%);
}

